@@ -3665,7 +3665,7 @@ Ms Pac-Man (Stella extended codes):
         <tr><td>4A50 &#178;</td><td>64K 4A50 + ram </td><td>.4A5, .4A50 </td></tr>
         <tr><td>4K </td><td>4K Atari </td><td>.4K </td></tr>
         <tr><td>4KSC </td><td>CPUWIZ 4K + ram </td><td>.4KS, .4KSC </td></tr>
-        <tr><td>AR </td><td>Supercharger </td><td>.AR </td></tr>
+        <tr><td>AR &#178;</td><td>Supercharger </td><td>.AR </td></tr>
         <tr><td>BF </td><td>CPUWIZ 256K </td><td>.BF </td></tr>
         <tr><td>BFSC </td><td>CPUWIZ 256K + ram</td><td>.BFS, .BFSC </td></tr>
         <tr><td>BUS </td><td>Experimental</td><td>.BUS </td></tr>
@@ -3693,12 +3693,13 @@ Ms Pac-Man (Stella extended codes):
         <tr><td>F8SC </td><td>8K Atari + ram </td><td>.F8S, .F8SC </td></tr>
         <tr><td>FA </td><td>CBS RAM Plus </td><td>.FA </td></tr>
         <tr><td>FA2 </td><td>CBS RAM Plus 24/28K </td><td>.FA2 </td></tr>
+		<tr><td>FC </td><td>Amiga Power Play Aracde 16/32K </td><td>.FC </td></tr>
         <tr><td>FE </td><td>8K Decathlon </td><td>.FE </td></tr>
         <tr><td>MDM </td><td>Menu Driven Megacart </td><td>.MDM </td></tr>
         <tr><td>SB </td><td>128-256k SUPERbanking </td><td>.SB </td></tr>
         <tr><td>UA </td><td>8K UA Ltd. </td><td>.UA </td></tr>
         <tr><td>UASW </td><td>8K UA Ltd. (swapped banks)</td><td>.UASW </td></tr>
-        <tr><td>WD </td><td>Wickstead Design </td><td>.WD </td></tr>
+        <tr><td>WD </td><td>Wickstead Design (Pink Panther) </td><td>.WD </td></tr>
         <tr><td>X07 &#185;</td><td>64K AtariAge </td><td>.X07 </td></tr>
       </table></td>
     </tr>
