@@ -43,6 +43,7 @@ MODULE_OBJS := \
 	src/emucore/CartF8SC.o \
 	src/emucore/CartFA.o \
 	src/emucore/CartFA2.o \
+	src/emucore/CartFC.o \
 	src/emucore/CartFE.o \
 	src/emucore/CartMDM.o \
 	src/emucore/CartSB.o \
